# kurs3

./: README.md  pyproject.toml
src/: main.py  operations.json  utils.py
test/: test_utils.py  utils_for_test.py
