[tool.poetry]
name = "kurs3"
version = "0.1.0"
description = ""
authors = ["bevstrogan <bevstrogan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datetime = "^5.4"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
